welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not found: value setCouleur
for(h<- 0 to 5) { setCouleur(tab(h))}}
                  ^