welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var tab = new Array[Color] (6)
for (i<- 0 to 5 ) {tab(i) = getCouleurSol();avance()} 
baisseBrosse()
for (i<-0 to 5) {gauche();avance();droite();
for(h<- 0 to 5) { setCouleur(tab(h))}}
}
